--- a/CraftyBoxes/CraftyBoxes.csproj
+++ b/CraftyBoxes/CraftyBoxes.csproj
@@ -164,7 +164,7 @@
         </PropertyGroup>
     </Target>
     <Target Name="Copy" AfterTargets="GetAssemblyVersion">
-        <Exec Command="copy /Y &quot;$(TargetDir)$(AssemblyName).dll&quot; &quot;C:\Users\crypt\AppData\Roaming\r2modmanPlus-local\Valheim\profiles\CraftyBoxTesting\BepInEx\plugins\OdinPlus-OdinsCraftyBoxes\$(AssemblyName).dll&quot;" />
+        <!--<Exec Command="copy /Y &quot;$(TargetDir)$(AssemblyName).dll&quot; &quot;C:\Users\crypt\AppData\Roaming\r2modmanPlus-local\Valheim\profiles\CraftyBoxTesting\BepInEx\plugins\OdinPlus-OdinsCraftyBoxes\$(AssemblyName).dll&quot;" />-->
         <Exec Command="copy /Y &quot;README.md&quot; &quot;Thunderstore\README.md&quot;" />
     </Target>
     <Target Name="MakeThunderstorePackage" AfterTargets="Copy">
